--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -56,3 +56,10 @@ jobs:
       - name: Clean up Docker image
         if: always()
         run: docker rmi mcp-registry:test || true
+      - name: Push Docker image to GHCR
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: /Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/mcp-registry:latest
