--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -1,14 +1,7 @@
 name: Docker Build and Test
 
 on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
-      - develop
+  workflow_dispatch
 
 jobs:
   build-and-test:
@@ -56,10 +49,16 @@ jobs:
       - name: Clean up Docker image
         if: always()
         run: docker rmi mcp-registry:test || true
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push Docker image to GHCR
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: /Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/mcp-registry:latest
