--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -2,7 +2,9 @@ name: Docker Build and Test
 
 on:
   workflow_dispatch
-
+permissions:
+  contents: read
+  packages: write
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -49,6 +51,8 @@ jobs:
       - name: Clean up Docker image
         if: always()
         run: docker rmi mcp-registry:test || true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
